Fix outline clipping on message form

--- a/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
@@ -13,6 +13,7 @@
   width: 100%;
   position: relative;
   margin-bottom: calc(-1 * var(--sm-padding-x));
+  margin-top: .2rem;
 }
 
 .wrapper {
